# offerQuest

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements-dev.txt
.plans/: refactor_plan_checkhov_codex.md
data/: CL_BF_20260415.doc  CV_BF_20260415.doc  CV_BF_20260415.docx  README.md
jobs/: README.md  sources.json
offerquest/: __init__.py  ats.py  cli.py  cover_letter.py  diagnostics.py  docx.py  errors.py  extractors.py  jobs.py  matching.py  ollama.py  profile.py  reranking.py  resume_tailoring.py  scoring.py  types.py  workbench.py  workspace.py
offerquest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
offerquest/config/: __init__.py  defaults.json
offerquest/web/: _routes_overview.py  _routes_setup.py  _routes_workflows.py  _support.py  app.py
offerquest/web/static/: styles.css
offerquest/web/templates/: artifact_preview.html  base.html  build_cover_letter.html  build_profile.html  compare_cover_letters.html  dashboard.html  job_sources.html  ollama_setup.html  rankings.html  rerank_jobs.html  run_detail.html  runs.html  tailor_cv.html  tailor_cv_draft.html
offerquest/workbench/: __init__.py  _util.py  documents.py  job_sources.py  jobs.py  ollama_setup.py  profile.py  runs.py  setup.py
scripts/: build-release.sh  cover-letter-models.sh  install-ollama-local.sh  ollama-local.sh  pull-cover-letter-models.sh  run-cover-letter-ab-test.sh  smoke-test-install.sh  start-ollama-local.sh
tests/: test_ats.py  test_cli_productization.py  test_config.py  test_cover_letter.py  test_diagnostics.py  test_docx.py  test_extractors.py  test_jobs.py  test_matching.py  test_ollama.py  test_profile.py  test_release_smoke.py  test_reranking.py  test_resume_tailoring.py  test_scoring.py  test_scoring_regression.py  test_web_app.py  test_workbench.py  test_workspace.py
