[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offerquest"
version = "0.1.0"
description = "Job-fit analysis, ATS checks, and cover-letter generation tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.scripts]
offerquest = "offerquest.cli:main"
offerquest-workbench = "offerquest.web.app:main"

[tool.setuptools.packages.find]
include = ["offerquest*"]

[tool.setuptools.package-data]
"offerquest.web" = ["templates/*.html", "static/*.css"]
"offerquest.config" = ["*.json"]
